<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">TMDB</string>
    <string name="forget_password">Forget Password</string>
    <string name="moon_light">Moon light</string>
    <string name="username">Username</string>
    <string name="fffbf6">#FFFBF6</string>
    <string name="keep_me_signed_in">Keep me Signed in</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_an_account">create an account</string>
    <string name="create">create</string>
    <string name="signup">signup</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="full_name">Full name</string>
    <string name="log_in">log in</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="textview" />
    <string name="course_name">course_name</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="up_coming">Up coming</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
</resources>